--- a/.github/workflows/deploy-shiny.yml
+++ b/.github/workflows/deploy-shiny.yml
@@ -8,6 +8,8 @@ jobs:
     container: rocker/verse:latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          lfs: true
       - name: Install shiny & friends
         run: |
           install.packages(c("shiny", "shinyBS", "DT", "rsconnect"))
