--- a/.github/workflows/deploy-shiny.yml
+++ b/.github/workflows/deploy-shiny.yml
@@ -20,5 +20,5 @@ jobs:
         shell: Rscript {0}
       - name: Push to shinyapps.io
         run: |
-          Rscript -e "rsconnect::setAccountInfo(name='mahshaaban', token=${{secrets.SHINYAPPS_TOKEN}}, secret=${{secrets.SHINYAPPS_SECRET}})"
+          Rscript -e "rsconnect::setAccountInfo(name='bcmslab', token=${{secrets.SHINYAPPS_TOKEN}}, secret=${{secrets.SHINYAPPS_SECRET}})"
           Rscript -e "rsconnect::deployApp(appName = 'LINPSAPP')"
